Fix form tool alignment

--- a/css/dialogs.css
+++ b/css/dialogs.css
@@ -242,7 +242,6 @@
 		position: relative;
 		margin: 0;
 		margin-right: auto;
-		padding-top: 2px;
 	}
 	.dialog_bar.form_bar .tool > .tooltip {
 		display: none !important;
@@ -733,10 +732,10 @@
 	.settings_list li:hover .setting_icon i {
 		color: var(--color-light);
 	}
-	.password_toggle {
+	.bar div.password_toggle {
 		display: inline-block;
 		margin-left: 4px;
-		margin-top: 4px;
+		padding-top: 2px;
 		width: 24px;
 		text-align: center;
 		vertical-align: text-bottom;
